Fix overflow

--- a/jlivesey/style.css
+++ b/jlivesey/style.css
@@ -103,6 +103,7 @@ pre {
     padding: 10px;
     margin-bottom: 10px;
     text-align: left;
+	overflow-y: auto;
 }
 
 .info {
